# ParticlePractice

./: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  glad.c  main.cpp
include/glad/glad/: glad.h
shaders/: triangle_vertex.glsl
